--- a/src/roles/app-server/tasks/docker-setup.yml
+++ b/src/roles/app-server/tasks/docker-setup.yml
@@ -1,4 +1,9 @@
 ---
+- name: Check If Docker Is Installed
+  command: docker --version
+  register: docker_valid
+  ignore_errors: true
+
 # Completely setup docker
 - name: Remove old docker versions
   become: true
@@ -7,6 +12,7 @@
       - containerd
       - runc
     state: absent
+  when: docker_valid.failed
 
 - name: Install pre-requisites
   become: true
@@ -19,12 +25,14 @@
       - apt-transport-https
     state: latest
     update_cache: yes
+  when: docker_valid.failed
 
 - name: Add signing key
   become: true
   apt_key:
     url: "https://download.docker.com/linux/{{ ansible_distribution | lower }}/gpg"
     state: present
+  when: docker_valid.failed
 
 - name: Add Docker Repository
   become: true
@@ -32,6 +40,7 @@
     repo: "deb [arch={{ ansible_architecture }}] https://download.docker.com/linux/{{ ansible_distribution | lower }} {{ ansible_distribution_release }} stable"
     state: present
     filename: docker
+  when: docker_valid.failed
 
 - name: Install Docker & dependencies
   become: true
@@ -43,12 +52,12 @@
       - docker-registry
     state: latest
     update_cache: true
+  when: docker_valid.failed
 
 - name: Docker is running
   service:
     name: docker
     state: started
-
 
 # Commenting this out as the parent network adapter isn't correct
 # Need to fix this when I have more time
