restart swag after completion

--- a/src/roles/app-server/tasks/swag.yml
+++ b/src/roles/app-server/tasks/swag.yml
@@ -154,4 +154,10 @@
 #     mode: "0755"
 #     owner: william
 #     group: william
+
+- name: Restart PiHole for DNS entries
+  docker_container:
+    name: swag
+    state: started
+    restart: true
 ##################################################################################################
