--- a/src/roles/monitoring/tasks/prometheus-setup.yml
+++ b/src/roles/monitoring/tasks/prometheus-setup.yml
@@ -1,24 +1,20 @@
-- name: Create docker volume (prometheus)
+- name: Create prometheus directories create directory if they don't exist
   become: true
   file:
-    path: "{{ host_prometheus_folder_location }}"
+    path: "{{ item }}"
     state: directory
-    mode: "0777"
     owner: root
-
-- name: Create docker volume (prometheus data)
-  become: true
-  file:
-    path: "{{ host_prometheus_folder_location }}/data"
-    state: directory
-    mode: "0777"
-    owner: root
+    group: root
+    mode: 0777
+  loop:
+    - "{{ host_prometheus_folder_location }}/data"
+    - "{{ host_prometheus_folder_location }}/config"
 
 - name: Ensure that the prometheus configuration is loaded
   become: true
   template:
     src: prometheus.yml
-    dest: "{{ host_prometheus_folder_location }}/prometheus.yml"
+    dest: "{{ host_prometheus_folder_location }}/config/prometheus.yml"
     mode: "0777"
     owner: root
 
@@ -32,7 +28,7 @@
     networks:
       - name: curidge
     volumes:
-      - "{{ host_prometheus_folder_location }}:/etc/prometheus"
+      - "{{ host_prometheus_folder_location }}/config:/etc/prometheus"
       - "{{ host_prometheus_folder_location }}/data:/prometheus/data"
       - "/var/run/docker.sock:/var/run/docker.sock"
       - "/etc/timezone:/etc/timezone:ro"
