--- a/src/roles/app-server/tasks/setup-transmission.yml
+++ b/src/roles/app-server/tasks/setup-transmission.yml
@@ -1,10 +1,10 @@
----
-# Description:
-# Lots of configuration as I didn't want to share this with others...
+# Transmission
+# Documentation: https://transmissionbt.com
+# Purpose: To dowload Linux ISOs such as Debian & Mint
 - name: Create docker data volume
   become: true
   file:
-    path: "/docker/transmission"
+    path: "{{ host_transmission_folder_location }}"
     state: directory
     mode: "0777"
     owner: root
@@ -20,7 +20,7 @@
     pull: true
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock"
-      - "/docker/transmission:/data"
+      - "{{ host_transmission_folder_location }}:/data"
       - "/etc/timezone:/etc/timezone:ro"
     env:
       OPENVPN_PROVIDER: "{{ vpn_provider }}"
