--- a/src/roles/app-server/defaults/main.yml
+++ b/src/roles/app-server/defaults/main.yml
@@ -6,3 +6,4 @@ host_transmission_folder_location: /docker/transmission
 host_plex_folder_location: /docker/plex
 host_tautulli_folder_location: /docker/tautulli
 host_traccar_folder_location: /docker/traccar
+host_homarr_folder_location: /docker/homarr
