--- a/src/roles/dns/tasks/main.yml
+++ b/src/roles/dns/tasks/main.yml
@@ -42,3 +42,10 @@
     state: started
     restart: true
   when: dnsentry.changed
+
+- name: Restart SWAG for DNS entries
+  docker_container:
+    name: pihole
+    state: started
+    restart: true
+  when: dnsentry.changed
