--- a/src/roles/dns/tasks/setup-swag-dns.yml
+++ b/src/roles/dns/tasks/setup-swag-dns.yml
@@ -14,5 +14,5 @@
   become: true
   replace:
     path: "{{ host_cert_manager_folder_location }}/nginx/proxy-confs/pihole.subdomain.conf"
-    regexp: "set $upstream_app*"
+    regexp: "set \\$upstream_app.*"
     replace: "set $upstream_app {{ pi_hole_container_ip }};"
