--- a/src/vars.template.yml
+++ b/src/vars.template.yml
@@ -47,13 +47,9 @@ docker_network_ip_inside: 192.168.169.0 # ip range of only inside allowed traffi
 ##  these containers without needing to define ports
 plex_container_ip: 192.168.96.10
 plex_claim_token: xxxxxxxx # https://www.plex.tv/claim/ to get a new token
-node_red_container_ip: 192.168.96.11
-mealie_container_ip: 192.168.96.12
 pi_hole_container_ip: 192.168.96.13
 tautulli_container_ip: 192.168.96.13
-dokuwiki_container_ip: 192.168.169.10
-piwigo_container_ip: 192.168.169.11
-piwigo_mysql_ip: 192.168.169.12
+nr_container_ip: 192.168.96.100
 traccar_container_ip: 192.168.96.15
 traccar_db_container_ip: 192.168.96.16
 overseerr_container_ip: 192.168.96.17
