--- a/src/roles/app-server/tasks/docker-setup.yml
+++ b/src/roles/app-server/tasks/docker-setup.yml
@@ -68,26 +68,33 @@
 - name: Create IPVLAN L3 - Outside
   become: true
   docker_network:
-    name: port-freedom
+    name: docker
     driver: ipvlan
     driver_options:
       parent: "{{ physical_interfaces_cmd.stdout_lines[0] }}"
       ipvlan_mode: l3
     ipam_config:
       - subnet: "{{ docker_network_ip_outside }}/24"
-    internal: yes
-
-- name: Create IPVLAN L3 - Inside (no network)
-  become: true
-  docker_network:
-    name: no-internet
-    driver: ipvlan
-    driver_options:
-      parent: "{{ physical_interfaces_cmd.stdout_lines[0] }}"
-      ipvlan_mode: l3
-    ipam_config:
       - subnet: "{{ docker_network_ip_inside }}/24"
-    internal: no
+
+    # - name: Ensure no internet access for ipvlan_no_internet network
+    #   command: ip route del default via 192.168.20.1
+    #   ignore_errors: yes
+
+    # - name: Allow communication between Docker networks
+    #   ufw:
+    #     rule: allow
+    #     from_ip: 192.168.20.0/24
+    #     to_ip: 192.168.10.0/24
+    #     comment: Allow communication between ipvlan_no_internet and ipvlan_internet
+
+    # - name: Block internet access for ipvlan_no_internet network
+    #   ufw:
+    #     rule: deny
+    #     from_ip: 192.168.20.0/24
+    #     to_ip: any
+    #     comment: Block internet access for ipvlan_no_internet network
+    #     direction: out
 
 - name: Create custom bridge docker network
   become: true
