change docker name

--- a/src/roles/app-server/tasks/docker-setup.yml
+++ b/src/roles/app-server/tasks/docker-setup.yml
@@ -68,7 +68,7 @@
 - name: Create IPVLAN L3 - Outside
   become: true
   docker_network:
-    name: docker
+    name: docker_ipvlan
     driver: ipvlan
     driver_options:
       parent: "{{ physical_interfaces_cmd.stdout_lines[0] }}"
