--- a/src/roles/app-server/tasks/setup-tautulli.yml
+++ b/src/roles/app-server/tasks/setup-tautulli.yml
@@ -16,7 +16,7 @@
     image: tautulli/tautulli
     restart_policy: unless-stopped
     networks:
-      - name: port-freedom
+      - name: docker_ipvlan
         ipv4_address: "{{ tautulli_container_ip }}"
     pull: true
     volumes:
