lots of minor fixes add radarr

--- a/src/roles/app-server/tasks/setup-plex.yml
+++ b/src/roles/app-server/tasks/setup-plex.yml
@@ -47,7 +47,7 @@
     pull: true
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock"
-      - "/mnt/nas/plex:/config"
+      - "{{ host_plex_folder_location }}/config:/config"
       - "{{ host_plex_folder_location }}/transcode:/transcode"
       - "/etc/timezone:/etc/timezone:ro"
       - "/mnt/nas/movies:/Movies"
