--- a/src/roles/app-server/defaults/main.yml
+++ b/src/roles/app-server/defaults/main.yml
@@ -9,3 +9,4 @@ host_traccar_folder_location: /docker/traccar
 host_homarr_folder_location: /docker/homarr
 host_netboot_folder_location: /docker/netboot
 host_radarr_folder_location: /docker/radarr
+host_prowlarr_folder_location: /docker/prowlarr
