--- a/src/roles/app-server/tasks/setup-radarr.yml
+++ b/src/roles/app-server/tasks/setup-radarr.yml
@@ -1,7 +1,7 @@
 # Radarr
 # Documentation: https://docs.linuxserver.io/images/docker-radarr
 # Purpose: To help automate movement of media
-- name: Create nginx data volume
+- name: Create docker volume
   become: true
   file:
     path: "{{ host_radarr_folder_location }}/config"
@@ -26,7 +26,7 @@
       - "/etc/timezone:/etc/timezone:ro"
       - "/etc/localtime:/etc/localtime:ro"
       - "{{ host_radarr_folder_location }}/config:/config"
-      - "{{ host_transmission_folder_location }}:/data/downloads"
+      - "{{ host_transmission_folder_location }}:/data"
       - "/mnt/nas/movies:/movies"
     ports:
       - 7878:7878
