--- a/src/roles/monitoring/tasks/grafana-setup.yml
+++ b/src/roles/monitoring/tasks/grafana-setup.yml
@@ -3,7 +3,8 @@
   file:
     path: "{{ host_grafana_folder_location }}"
     state: directory
-    mode: "0777"
+    mode: '0777'
+    recurse: yes
     owner: root
 
 # This container will collect displays the metrics from prometheus
@@ -19,6 +20,14 @@
     restart_policy: unless-stopped
     env:
       - GF_SERVER_ROOT_URL: https://grafana.keystoneridge.duckdns.org/grafana
+      # Separated by ;
+      - GF_INSTALL_PLUGINS: "grafana-clock-panel"
+    healthcheck:
+      test: ["CMD", "curl", "-f", "https://grafana.keystoneridge.duckdns.org"]
+      interval: 30s
+      timeout: 10s
+      retries: 6
+      start_period: 15s
     volumes:
       - "/etc/timezone:/etc/timezone:ro"
       - "/etc/localtime:/etc/localtime:ro"
