recurse prometheus directories to 777

--- a/src/roles/monitoring/tasks/prometheus-setup.yml
+++ b/src/roles/monitoring/tasks/prometheus-setup.yml
@@ -5,7 +5,8 @@
     state: directory
     owner: root
     group: root
-    mode: 0777
+    mode: "0777"
+    recurse: yes
   loop:
     - "{{ host_prometheus_folder_location }}/data"
     - "{{ host_prometheus_folder_location }}/config"
