revert traccar to previous version

--- a/src/roles/app-server/tasks/setup-traccar.yml
+++ b/src/roles/app-server/tasks/setup-traccar.yml
@@ -44,7 +44,7 @@
 - name: Traccar Docker Container
   docker_container:
     name: traccar
-    image: traccar/traccar
+    image: traccar/traccar:6.2
     pull: true
     networks:
       - name: docker_ipvlan
