feat(stirling-pdf): Add stirling pdf
- Add stirling pdf to self hosted

--- a/src/roles/app-server/tasks/swag-dns.yml
+++ b/src/roles/app-server/tasks/swag-dns.yml
@@ -149,6 +149,23 @@
     owner: william
     group: william
 
+- name: Load 'stirling-pdf.conf'
+  become: true
+  copy:
+    src: "{{ host_cert_manager_folder_location }}/nginx/proxy-confs/stirling-pdf.subdomain.conf.sample"
+    dest: "{{ host_cert_manager_folder_location }}/nginx/proxy-confs/stirling-pdf.subdomain.conf"
+    remote_src: true
+    mode: "0755"
+    owner: william
+    group: william
+
+- name: Change url for stirling
+  become: true
+  replace:
+    path: "{{ host_cert_manager_folder_location }}/nginx/proxy-confs/stirling-pdf.subdomain.conf"
+    regexp: "server_name.*$"
+    replace: "server_name pdf.*;"
+
 - name: Restart SWAG after DNS entries changed for DNS entries
   docker_container:
     name: swag
