--- a/src/roles/app-server/defaults/main.yml
+++ b/src/roles/app-server/defaults/main.yml
@@ -10,4 +10,5 @@ host_homarr_folder_location: /docker/homarr
 host_netboot_folder_location: /docker/netboot
 host_radarr_folder_location: /docker/radarr
 host_prowlarr_folder_location: /docker/prowlarr
+host_sonarr_folder_location: /docker/sonarr
 host_stirling_folder_location: /docker/stirling-pdf
