--- a/src/roles/app-server/tasks/setup-swag.yml
+++ b/src/roles/app-server/tasks/setup-swag.yml
@@ -30,11 +30,18 @@
       VALIDATION: "{{ dns_provider }}"
       DUCKDNSTOKEN: "{{ duckdns_token }}"
       EMAIL: "{{ contact_email }}"
+      DOCKER_MODS: "linuxserver/mods:swag-auto-reload|linuxserver/mods:swag-dashboard"
     capabilities:
       - NET_ADMIN
     ports:
       - 443:443
       - 80:80
+      - 81:81
+    healthcheck:
+      test: ["CMD", "curl", "-kL", "http://localhost:80"]
+      interval: 15s
+      timeout: 10s
+      retries: 5
     labels:
       com.centurylinklabs.watchtower.enable: "true"
 
